--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "flexboxgrid": "^6.3.1",
+    "normalize.css": "^8.0.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
